# arena-capstone

./: .envrc  .gitignore  .gitmodules  .mcp.json  .sops.yaml  CLAUDE.md  README.md  pyproject.toml  secrets.env
