[project]
name = "arena-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    #   "safetytooling @ git+https://github.com/safety-research/safety-tooling.git@main",
    "inspect-ai==0.3.116",
    "unidecode",
    "anthropic",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "nvidia-ml-py3>=7.352.0",
    "huggingface-hub>=0.29.2",
    "pandas>=2.2.3",
    "openai>=1.82.0",
    "fire>=0.7.0",
    "accelerate>=1.4.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "seaborn>=0.13.2",
    "pathlib>=1.0.1",
    "datasets>=3.3.2",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "bitsandbytes>=0.45.5 ; sys_platform == 'linux'",
    "inspect-ai>=0.3.92",
    "aiofiles>=24.1.0",
    "flashinfer-python==0.2.3",
    "judge",
    "sft",
    "vllm>=0.8.5.post1",
    "adjusttext>=1.3.0",
    "simple-parsing>=0.1.8",
    "backoff>=2.2.1",
    "unsloth>=2026.1.4",
    "wandb>=0.24.1",
    "trl>=0.24.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ty>=0.0.14",
]
